Added correlation number

--- a/CO2-Temperature-correlation.ipynb
+++ b/CO2-Temperature-correlation.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 172,
+   "execution_count": 4,
    "metadata": {
     "scrolled": true
    },
@@ -134,7 +134,7 @@
        "1958-07-01      1958.542   315.86        315.86  314.98              -1"
       ]
      },
-     "execution_count": 172,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -152,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -169,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 170,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -316,7 +316,7 @@
        "1750-05-01                                        NaN  "
       ]
      },
-     "execution_count": 170,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -334,7 +334,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 266,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -347,7 +347,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 268,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -373,10 +373,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.7939510207491787"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "co2_data2.corr(temperature_data2)"
+   ]
   }
  ],
  "metadata": {
